new endpoint for get all users
